// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`emit.args npm 1`] = `
Array [
  Array [
    "sequential-update/start",
    Object {
      "updateTasks": Array [
        Object {
          "name": "updtr-test-module-1",
          "rollbackTo": "1.1.1",
          "updateTo": "2.0.0",
        },
        Object {
          "name": "updtr-test-module-2",
          "rollbackTo": "1.1.1",
          "updateTo": "2.1.1",
        },
      ],
    },
  ],
  Array [
    "sequential-update/updating",
    Object {
      "cmd": "npm install updtr-test-module-1@2.0.0",
      "name": "updtr-test-module-1",
      "rollbackTo": "1.1.1",
      "updateTasks": Object {
        "current": 1,
        "total": 2,
      },
      "updateTo": "2.0.0",
    },
  ],
  Array [
    "sequential-update/testing",
    Object {
      "cmd": "npm test",
      "name": "updtr-test-module-1",
      "rollbackTo": "1.1.1",
      "updateTasks": Object {
        "current": 1,
        "total": 2,
      },
      "updateTo": "2.0.0",
    },
  ],
  Array [
    "sequential-update/test-result",
    Object {
      "name": "updtr-test-module-1",
      "rollbackTo": "1.1.1",
      "stdout": "Oh noez",
      "success": false,
      "updateTasks": Object {
        "current": 1,
        "total": 2,
      },
      "updateTo": "2.0.0",
    },
  ],
  Array [
    "sequential-update/rollback",
    Object {
      "cmd": "npm install updtr-test-module-1@1.1.1",
      "name": "updtr-test-module-1",
      "rollbackTo": "1.1.1",
      "success": false,
      "updateTasks": Object {
        "current": 1,
        "total": 2,
      },
      "updateTo": "2.0.0",
    },
  ],
  Array [
    "sequential-update/updating",
    Object {
      "cmd": "npm install updtr-test-module-2@2.1.1",
      "name": "updtr-test-module-2",
      "rollbackTo": "1.1.1",
      "updateTasks": Object {
        "current": 2,
        "total": 2,
      },
      "updateTo": "2.1.1",
    },
  ],
  Array [
    "sequential-update/testing",
    Object {
      "cmd": "npm test",
      "name": "updtr-test-module-2",
      "rollbackTo": "1.1.1",
      "updateTasks": Object {
        "current": 2,
        "total": 2,
      },
      "updateTo": "2.1.1",
    },
  ],
  Array [
    "sequential-update/test-result",
    Object {
      "name": "updtr-test-module-2",
      "rollbackTo": "1.1.1",
      "stdout": "Everything ok",
      "success": true,
      "updateTasks": Object {
        "current": 2,
        "total": 2,
      },
      "updateTo": "2.1.1",
    },
  ],
  Array [
    "sequential-update/end",
    Object {
      "updateResults": Array [
        Object {
          "name": "updtr-test-module-1",
          "success": false,
          "version": "1.1.1",
        },
        Object {
          "name": "updtr-test-module-2",
          "success": true,
          "version": "2.1.1",
        },
      ],
    },
  ],
]
`;

exports[`emit.args yarn 1`] = `
Array [
  Array [
    "sequential-update/start",
    Object {
      "updateTasks": Array [
        Object {
          "name": "updtr-test-module-1",
          "rollbackTo": "1.1.1",
          "updateTo": "2.0.0",
        },
        Object {
          "name": "updtr-test-module-2",
          "rollbackTo": "1.1.1",
          "updateTo": "2.1.1",
        },
      ],
    },
  ],
  Array [
    "sequential-update/updating",
    Object {
      "cmd": "yarn add updtr-test-module-1@2.0.0",
      "name": "updtr-test-module-1",
      "rollbackTo": "1.1.1",
      "updateTasks": Object {
        "current": 1,
        "total": 2,
      },
      "updateTo": "2.0.0",
    },
  ],
  Array [
    "sequential-update/testing",
    Object {
      "cmd": "yarn test",
      "name": "updtr-test-module-1",
      "rollbackTo": "1.1.1",
      "updateTasks": Object {
        "current": 1,
        "total": 2,
      },
      "updateTo": "2.0.0",
    },
  ],
  Array [
    "sequential-update/test-result",
    Object {
      "name": "updtr-test-module-1",
      "rollbackTo": "1.1.1",
      "stdout": "Oh noez",
      "success": false,
      "updateTasks": Object {
        "current": 1,
        "total": 2,
      },
      "updateTo": "2.0.0",
    },
  ],
  Array [
    "sequential-update/rollback",
    Object {
      "cmd": "yarn add updtr-test-module-1@1.1.1",
      "name": "updtr-test-module-1",
      "rollbackTo": "1.1.1",
      "success": false,
      "updateTasks": Object {
        "current": 1,
        "total": 2,
      },
      "updateTo": "2.0.0",
    },
  ],
  Array [
    "sequential-update/updating",
    Object {
      "cmd": "yarn add updtr-test-module-2@2.1.1",
      "name": "updtr-test-module-2",
      "rollbackTo": "1.1.1",
      "updateTasks": Object {
        "current": 2,
        "total": 2,
      },
      "updateTo": "2.1.1",
    },
  ],
  Array [
    "sequential-update/testing",
    Object {
      "cmd": "yarn test",
      "name": "updtr-test-module-2",
      "rollbackTo": "1.1.1",
      "updateTasks": Object {
        "current": 2,
        "total": 2,
      },
      "updateTo": "2.1.1",
    },
  ],
  Array [
    "sequential-update/test-result",
    Object {
      "name": "updtr-test-module-2",
      "rollbackTo": "1.1.1",
      "stdout": "Everything ok",
      "success": true,
      "updateTasks": Object {
        "current": 2,
        "total": 2,
      },
      "updateTo": "2.1.1",
    },
  ],
  Array [
    "sequential-update/end",
    Object {
      "updateResults": Array [
        Object {
          "name": "updtr-test-module-1",
          "success": false,
          "version": "1.1.1",
        },
        Object {
          "name": "updtr-test-module-2",
          "success": true,
          "version": "2.1.1",
        },
      ],
    },
  ],
]
`;

exports[`exec.args npm 1`] = `
Array [
  Array [
    "npm install updtr-test-module-1@2.0.0",
  ],
  Array [
    "npm test",
  ],
  Array [
    "npm install updtr-test-module-1@1.1.1",
  ],
  Array [
    "npm install updtr-test-module-2@2.1.1",
  ],
  Array [
    "npm test",
  ],
]
`;

exports[`exec.args yarn 1`] = `
Array [
  Array [
    "yarn add updtr-test-module-1@2.0.0",
  ],
  Array [
    "yarn test",
  ],
  Array [
    "yarn add updtr-test-module-1@1.1.1",
  ],
  Array [
    "yarn add updtr-test-module-2@2.1.1",
  ],
  Array [
    "yarn test",
  ],
]
`;

exports[`sequentialUpdate() when the given updateTasks array is empty should resolve immediately without emitting events 1`] = `Array []`;

exports[`sequentialUpdate() when the given updateTasks array is empty should resolve immediately without emitting events 2`] = `Array []`;

exports[`updateResults one fail 1`] = `
Array [
  Object {
    "name": "updtr-test-module-1",
    "success": false,
    "version": "1.1.1",
  },
  Object {
    "name": "updtr-test-module-2",
    "success": true,
    "version": "2.1.1",
  },
]
`;

exports[`updateResults one fail rest pass 1`] = `
Array [
  Object {
    "name": "updtr-test-module-1",
    "success": false,
    "version": "1.1.1",
  },
  Object {
    "name": "updtr-test-module-2",
    "success": true,
    "version": "2.1.1",
  },
]
`;

exports[`updateResults success 1`] = `
Array [
  Object {
    "name": "updtr-test-module-1",
    "success": true,
    "version": "2.0.0",
  },
  Object {
    "name": "updtr-test-module-2",
    "success": true,
    "version": "2.1.1",
  },
]
`;

exports[`updateResults success 2`] = `
Array [
  Object {
    "name": "updtr-test-module-1",
    "success": true,
    "version": "2.0.0",
  },
  Object {
    "name": "updtr-test-module-2",
    "success": true,
    "version": "2.1.1",
  },
]
`;
